// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PullSecretSection /> PullSecretSection Disabled should render 1`] = `
<Fragment>
  <p>
    Download or copy your pull secret. The install program will prompt you for your pull secret during installation.
  </p>
  <div>
    <Button
      isDisabled={true}
      variant="secondary"
    >
      Download pull secret
    </Button>
    <CopyToClipboard
      onCopy={null}
      text=""
    >
      <span
        style={
          Object {
            "margin": "10px",
          }
        }
      >
        <Button
          className="install--copy-pull-secret"
          id="copyPullSecret"
          isDisabled={true}
          tabIndex="0"
          type="button"
          variant="link"
        >
          <span
            aria-hidden="true"
            className="fa fa-paste"
          />
            Copy Pull Secret
        </Button>
      </span>
    </CopyToClipboard>
  </div>
</Fragment>
`;

exports[`<PullSecretSection /> PullSecretSection should render 1`] = `
<Fragment>
  <p>
    Download or copy your pull secret. The install program will prompt you for your pull secret during installation.
  </p>
  <div>
    <Download
      content="{\\"error\\":\\"\\"}
"
      file="pull-secret"
      style={
        Object {
          "display": "inline",
        }
      }
    >
      <Button
        isDisabled={false}
        variant="secondary"
      >
        Download pull secret
      </Button>
    </Download>
    <CopyToClipboard
      onCopy={[Function]}
      text="{\\"error\\":\\"\\"}
"
    >
      <span
        style={
          Object {
            "margin": "10px",
          }
        }
      >
        <Button
          className="install--copy-pull-secret"
          id="copyPullSecret"
          isDisabled={false}
          tabIndex="0"
          type="button"
          variant="link"
        >
          <span
            aria-hidden="true"
            className="fa fa-paste"
          />
            Copy Pull Secret
        </Button>
      </span>
    </CopyToClipboard>
  </div>
</Fragment>
`;
